--- a/style.css
+++ b/style.css
@@ -21,6 +21,16 @@ blockquote {
   padding-bottom: 80px;
 }
 
+.good {
+  text-transform: capitalize;
+  color: green;
+}
+
+.bad {
+  text-transform: capitalize;
+  color: red;
+}
+
 p {
     font-family: 'Roboto Slab', serif;
     color: #1C1C1C;
