--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@ Body {
     background-repeat: no-repeat;
     background-position: bottom right;
     background-size: cover;
+    font-family: 'Open Sans', sans-serif;
+    color: #1C1C1C;
   }
+
 
   header:nth-child(1) {
     background-color:yellow;
@@ -31,6 +34,12 @@ blockquote {
 font-weight: bold;
 }
 
+.img1 {
+  float: left; 
+  width: 25%;
+  margin-right: 10px;
+}
+
 
 .good {
   text-transform: capitalize;
@@ -43,8 +52,7 @@ font-weight: bold;
 }
 
 p {
-    font-family: 'Roboto Slab', serif;
-    color: #1C1C1C;
+  color: #1C1C1C;
 }
 
 q { 
@@ -52,12 +60,13 @@ q {
 }
 
 ul {
-    font-family: 'Roboto Slab', serif;
     color: #1C1C1C;
 }
 
+
+
 table, th, td {
-    font-family: 'Roboto Slab', serif;
+    
     color: #1C1C1C;
     border:  1px solid black;
    
@@ -68,7 +77,7 @@ tr:nth-child(odd) {background-color: white;}
 
 
 a {
-    font-family: 'Roboto Slab', serif;
+    
     text-decoration: none;
     text-transform: uppercase;
   }
